<resources>
    <string name="app_name">BeaconScanner</string>

    <!--exhibit-->
    <string name="distance_unavailable">Nedostupné</string>
    <string name="distance_very_close">Vzdialenosť: Veľmi blízko</string>
    <string name="distance_close">Vzdialenosť: Na blízku</string>
    <string name="distance_nearby">Vzdialenosť: Neďaleko</string>
    <string name="distance_away">Vzdialenosť: Ďaleko</string>

    <!--activity_exhibit_manage-->
    <string name="exhibit_name">Názov exponátu</string>
    <string name="exhibit_about">Popis</string>
    <string name="exhibit_id">Beacon ID</string>
    <string name="exhibit_beacon">Vybrať Beacon</string>
    <string name="exhibit_beacon_title">Vyberte Beacon</string>
    <string name="exhibit_choose_image">Vybrať fotku</string>
    <string name="exhibit_permission">Výber obrázku z galérie</string>
    <string name="exhibit_image">Obrázok exponátu</string>
    <string name="exhibit_image_upload">Prebieha nahrávanie</string>
    <string name="exhibit_upload_done">Upload sa skončil</string>
    <string name="exhibit_validation_name">Zadajte názov exponátu.</string>
    <string name="exhibit_validation_about">Zadajte popis exponátu.</string>
    <string name="exhibit_validation_id">Zadajte adresu beaconu.</string>
    <string name="exhibit_validation_image">Zadajte obrázok exponátu.</string>
    <string name="add_exhibit">Pridať exponát</string>
    <string name="title_add_exhibit">Nový exponát</string>
    <string name="title_edit_exhibit">Úprava exponátu</string>
    <string name="exhibit_saved">Exponát bol uložený.</string>
    <string name="edit_exhibit">Upraviť exponát</string>
    <string name="exhibit_edited">Exponát bol upravený.</string>
    <string name="remove_exhibit">Zmazať exponát</string>
    <string name="exhibit_removed">Exponát bol zmazaný</string>

    <!--activity_preview_exhibit-->
    <string name="preview_exhibit_name">Názov exponátu</string>
    <string name="preview_exhibit_about">Popis</string>
    <string name="preview_exhibit_image">Obrázok exponátu</string>

    <!--fragment_exhibit-->
    <string name="fragment_exhibit_image">Obrázok exponátu</string>
    <string name="fragment_exhibit_row_title">Exponát</string>
    <string name="fragment_exhibit_row_about">Popis</string>
    <string name="fragment_exhibit_info">Približná zdialenosť od vás: X m</string>

    <!--fragment_devices_row-->
    <string name="fragment_devices_name">Názov zariadenia</string>
    <string name="fragment_devices_uuid">UUID</string>
    <string name="fragment_devices_info">Približná zdialenosť od vás: X m</string>

    <!--BluetoothDevicesListFragmentAdapter-->
    <string name="devices_rssi">RSSI</string>

    <!--Overview fragment Menu-->
    <string name="fragment_overview_visible_exhibits">Exponáty v okolí</string>
    <string name="fragment_overview_visible_devices">Viditeľné zariadenia</string>
    <string name="fragment_overview_all_exhibits">Všetky exponáty</string>


</resources>
