<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <ImageView
        android:id="@+id/fragment_exhibit_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/fragment_exhibit_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragment_exhibit_row_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_exhibit_row_title"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fragment_exhibit_row_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:text="@string/fragment_exhibit_row_about"
            android:ellipsize="end"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fragment_exhibit_row_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_exhibit_info"/>

    </LinearLayout>

</LinearLayout>