<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/fragment_device_row_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_devices_name"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fragment_device_row_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="3"
        android:text="@string/fragment_devices_uuid"
        android:ellipsize="end"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/fragment_device_row_rssi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_devices_info" />

</LinearLayout>